--- a/app/src/main/res/layout/item_rcv_post_home.xml
+++ b/app/src/main/res/layout/item_rcv_post_home.xml
@@ -279,6 +279,7 @@
                 android:layout_marginTop="@dimen/tv_describe_item_rcv_post_home_margin_top"
                 android:layout_marginEnd="@dimen/tv_describe_item_rcv_post_home_margin_end"
                 android:text="@string/tv_describe_item_rcv_post_home"
+                android:textColor="@color/text_not_you_color"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/layout_contains_item_item_rcv_post_home"
@@ -384,6 +385,7 @@
                 android:layout_marginStart="@dimen/image_btn_heart_item_post_home_margin_start"
                 android:layout_marginTop="@dimen/image_btn_heart_item_post_home_margin_top"
                 android:layout_marginBottom="@dimen/image_btn_heart_item_post_home_margin_bottom"
+                android:src="@drawable/heart_disable_item_rcv_posts_home"
                 android:background="@android:color/transparent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
