--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -412,4 +412,33 @@
     <dimen name="item_tv_service_margin_end">17.5dp</dimen>
     <dimen name="card_view_contains_information_item_rcv_post_home_card_elevation">0dp</dimen>
     <dimen name="item_rcv_post_home_margin_top">38dp</dimen>
+    <dimen name="round_back_post_full_size_margin_left">26dp</dimen>
+    <dimen name="round_back_post_full_size_margin_top">14dp</dimen>
+    <dimen name="number_of_turns_post_full_size_margin_top">17dp</dimen>
+    <dimen name="number_of_turns_post_full_size_margin_start">14dp</dimen>
+    <dimen name="image_post_full_size_height">492dp</dimen>
+    <dimen name="scroll_view_contains_article_info_height">0dp</dimen>
+    <dimen name="scroll_view_contains_article_info_margin_top">456dp</dimen>
+    <dimen name="scroll_view_post_full_size_radius">40dp</dimen>
+    <dimen name="image_avatar_post_full_size_width">30dp</dimen>
+    <dimen name="image_avatar_post_full_size_height">30dp</dimen>
+    <dimen name="image_avatar_post_full_size_margin_top">36dp</dimen>
+    <dimen name="image_avatar_post_full_size_margin_start">37dp</dimen>
+    <dimen name="tv_name_account_post_full_size_line_height">21dp</dimen>
+    <dimen name="tv_name_account_post_full_size_size">14dp</dimen>
+    <dimen name="tv_name_account_post_full_size_margin_top">41dp</dimen>
+    <dimen name="tv_name_account_post_full_size_margin_start">9dp</dimen>
+    <dimen name="tv_time_post_full_size_margin_top">44dp</dimen>
+    <dimen name="tv_time_post_full_size_margin_end">36dp</dimen>
+    <dimen name="tv_time_post_full_size_line_height">16dp</dimen>
+    <dimen name="tv_time_post_full_size_size">10dp</dimen>
+    <dimen name="tv_describe_post_full_size_margin_top">24dp</dimen>
+    <dimen name="tv_describe_post_full_size_margin_start">36dp</dimen>
+    <dimen name="tv_describe_post_full_size_margin_end">36dp</dimen>
+    <dimen name="layout_contains_item_post_full_size_margin_start">37dp</dimen>
+    <dimen name="layout_contains_item_post_full_size_margin_top">11dp</dimen>
+    <dimen name="rcv_user_like_post_full_size_margin_start">36dp</dimen>
+    <dimen name="rcv_user_like_post_full_size_margin_top">19dp</dimen>
+    <dimen name="image_btn_heart_post_full_size_margin_start">36dp</dimen>
+    <dimen name="add_to_bookmark_disable_post_full_size_margin_end">36dp</dimen>
 </resources>
